--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file: .env
 
   noteserver:
-    image: noteserver
+    image: gonotesd
     build:
       context: ../project-0/cmd/GoNotesd/
       dockerfile: Dockerfile
