adding logger with tcp server

--- a/cmd/logger/Dockerfile
+++ b/cmd/logger/Dockerfile
@@ -6,10 +6,10 @@ ADD . /app
 WORKDIR /app
 RUN apk add --no-cache git
 RUN go get -d
-RUN go build -o proxy ./proxy.go
+RUN go build -o logger ./log-server.go
 
 
 FROM alpine:latest AS production
 COPY --from=builder /app .
-EXPOSE 6060
-CMD [ "./proxy" ]
+EXPOSE 6061
+CMD [ "./logger" ]
